[B]1.0.15[/B]
- Kategóriák, illetve előfizetés típus lekérdezésének gyorsítása
[B]1.0.14[/B]
- Device name beállítás
[B]1.0.13[/B]
- Nagy méretű válasz JSON kezelése
[B]1.0.12[/B]
- DeviceID kezelése
- Bejelentkezett eszközök törlése
[B]1.0.11[/B]
- Kategória csoportok kezelése
[B]1.0.10[/B]
- Forrás változás követése
[B]1.0.9[/B]
- Live Stream lejátszása
[B]1.0.8[/B]
- DeviceID kivezetése
[B]1.0.7[/B]
- Login változás követése
[B]1.0.6[/B]
- Kategórián belüli csoportosítás
[B]1.0.5[/B]
- Keresés megvalósítása
- Leia BugFix
[B]1.0.4[/B]
- Forrás változás követése (bejelentkezés)
[B]1.0.3[/B]
- Cím kinyerésének módosítása
[B]1.0.2[/B]
- Leia BugFix
[B]1.0.1[/B]
- BugFix
[B]1.0.0[/B]
- RTL Most átnevezve RTL+-ra