@@ -1,3 +1,6 @@
+[B]1.0.16[/B]
+- Eszköz név, eszköz törlés Leia BugFix
+- Subscriptionname törlése, aktuális eszköz párosításának megszünetetése kijelentkezéskor
 [B]1.0.15[/B]
 - Kategóriák, illetve előfizetés típus lekérdezésének gyorsítása
 [B]1.0.14[/B]
